--- a/frontend/src/css/TargetContainer.css
+++ b/frontend/src/css/TargetContainer.css
@@ -1,6 +1,7 @@
 .TargetContainer{
-    background-color:red;
-    height: 90%;
-    width: 40%;
+    /*background-color:red;*/
+    height: calc(90% - 4rem);
+    width: calc(40% - 4rem);
     display: inline-block;
+    padding:2rem;
 }
